# dotsunda

./: Cargo.toml  LICENSE  README.md  deno.jsonc
.formatHelper/: guideFormatter.js
guides/: CharacterList.md  Syntax.md
playground/: README.md  input.sunda  output.txt
src/: datasets.rs  grammar.pest  grammar.rs  lib.rs  main.rs  old.grammar.pest
src/datasets/: consonant.rs  helper.rs  number.rs  rarangken.rs  vocal.rs
